# Platformer

./: CMakeLists.txt  README.md
Platfromer/: Button.cpp  CoordinatesForView.cpp  DetectCollision.cpp  Draw.cpp  Enemy.cpp  Enemy.hpp  Engine.cpp  Engine.hpp  Input.cpp  LevelManager.cpp  LevelManager.hpp  PlayableCharacter.hpp  RESOURCES.h  SpawnCoins.cpp  SpawnHearts.cpp  TextureManager.cpp  TextureManager.hpp  Update.cpp  main.cpp
Platfromer.xcodeproj/: project.pbxproj
Platfromer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Platfromer.xcodeproj/xcshareddata/xcschemes/: Platfromer.xcscheme
Platfromer.xcodeproj/xcuserdata/nikita.xcuserdatad/xcschemes/: xcschememanagement.plist
R.A.I. - The Robot/: Button.hpp  CoordinatesForView.cpp  DetectCollision.cpp  Draw.cpp  Engine.cpp  Engine.hpp  HUD.cpp  Input.cpp  LevelManager.cpp  PlayableCharacter.cpp  PlayableCharacter.hpp  RESOURCES.h  SoundManager.cpp  SpawnEnemies.cpp  Update.cpp  UpdateCoins.cpp  UpdateHearts.cpp
R.A.I. - The Robot.xcodeproj/: project.pbxproj
R.A.I. - The Robot.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
R.A.I. - The Robot.xcodeproj/project.xcworkspace/xcuserdata/nikita.xcuserdatad/: UserInterfaceState.xcuserstate
R.A.I. - The Robot.xcodeproj/xcshareddata/xcschemes/: Platfromer.xcscheme
Resources/map/: Level1.txt  Level2.txt  Level3.txt  Level4.txt  Level5.txt  Level6.txt  Level7.txt
Resources/sounds/: Credits.txt
src/: Engine.hpp  Input.cpp  LoadLevel.cpp  RESOURCES.h  SoundManager.hpp
